tests/negative/runtime/int_overflow_decr/input.ci
void main() {
    int x = -9223372036854775808;  // INT64_MIN
    x--;
    print(toString(x) + "\n");
}
